...
      "et dimitte nobis debita nostra,\n" +
      "sicut et nos dimittimus debitoribus nostris.\n" +
      "Et ne nos inducas in tentationem,\n" +
      "sed libera nos a malo. Amen.",

    .aveMaria:
      "Ave Maria,\n" +
      "gratia plena, Dominus tecum.\n" +
      "Benedicta tu in mulieribus,\n" +
      "et benedictus fructus ventris tui, Iesus.\n" +
      "Sancta Maria, Mater Dei,\n" +
      "ora pro nobis peccatoribus,\n" +
      "nunc et in hora mortis nostrae. Amen.",
...
